fix: Alignment Website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,3 +291,7 @@ html {
     padding: 2rem;
   }
 }
+
+html {
+  font-size: 90%;
+}
